--- a/Module6 Practice/WeatherPy.ipynb
+++ b/Module6 Practice/WeatherPy.ipynb
@@ -2671,8 +2671,7 @@
     }
    ],
    "source": [
-    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n",
-    "print(url)"
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n"
    ]
   },
   {
@@ -2711,8 +2710,7 @@
     }
    ],
    "source": [
-    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n",
-    "print(url)"
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n"
    ]
   },
   {
